# xcp-old

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: GitInfo.cmake  Predef.cmake
src/: CMakeLists.txt  client.cpp  client.h  common.h  message.cpp  message.h  program_options.cpp  program_options.h  server.cpp  server.h  transfer.cpp  transfer.h  xcp.cpp  xcp.h  xcpd.cpp  xcpd.h
src/infra/: assertion.h  disposable.h  gate_guard.h  infra.cpp  infra.h  logging.h  macro.h  manual_reset_event.h  network.cpp  network.h  predef.h  rundown_protection.h  semaphore.h  sighandle.h  sweeper.h  user.cpp  user.h
